# cylform

./: .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  SECURITY.md  epsilon_viniferin_triton.xyz  viniferin_macrocycle_6mer.xyz
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: desktop-release.yml  rust.yml  windows-desktop-build.yml
crates/core/: Cargo.toml
crates/core/src/: camera.rs  io.rs  lib.rs  molecule.rs  picker.rs  render.rs
crates/core/src/render/: context.rs  mesh.rs  mod.rs  pipeline.rs  shaders.rs
desktop/shared-fixtures/: default-app-settings.json  default-presentation-cameras.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: exports.rs  main.rs  menu.rs  molecule_commands.rs  pose_library.rs  presentation_state.rs  settings.rs  workspace.rs
desktop/src-ui/: index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
desktop/src-ui/src/: App.css  App.tsx  canvasEvents.ts  goldenDefaults.test.ts  groupVisibility.test.ts  groupVisibility.ts  index.css  persistence.test.ts  persistence.ts  renderProfiles.test.ts  renderProfiles.ts  shortcuts.test.ts  shortcuts.ts
desktop/src-ui/src/components/: AppearancePanel.tsx  ErrorBoundary.tsx  InfoPanel.tsx  LoadingSpinner.tsx  MoleculeCanvas.tsx  SettingsDialog.tsx  ShortcutsDialog.tsx  Toast.tsx  Toolbar.tsx
desktop/src-ui/src/components/molecule-canvas/: benchmark.ts  camera.ts  depthCue.test.ts  depthCue.ts  exportPng.ts  exportWorkflow.test.ts  exportWorkflow.ts  geometry.ts  highlights.test.ts  highlights.ts  labels.ts  materialPresets.ts  moleculeBatches.ts  picking.ts  sceneSetup.ts  screenLabels.ts  types.ts  visibility.ts  visualStyle.test.ts  visualStyle.ts
desktop/src-ui/src/domain/: measurements.test.ts  measurements.ts  paths.ts  visibility.test.ts  visibility.ts  workspaceTabs.test.ts  workspaceTabs.ts
desktop/src-ui/src/hooks/: useAppSettings.ts  usePoseLibrary.ts  usePresentationStateAutosave.ts  useWorkspaceTabs.ts
desktop/src-ui/src/styles/: dark-mode.css  variables.css
desktop/src-ui/src/styles/components/: canvas.css  dialogs.css  misc.css  panels.css  tabs.css  toast.css  toolbar.css
desktop/src-ui/src/types/: benchmark.ts  index.ts  molecule.ts  presentation.ts  settings.ts  workspace.ts
docs/: ARCHITECTURE.md  BENCHMARKING.md  INSTALL.md  KEYBOARD_SHORTCUTS.md
scripts/: benchmark-atom-capacity.mjs  build-desktop.mjs  build-desktop.ps1  generate-benchmark-xyz.mjs  generate-icons.py  render-profile-snapshots.mjs  snapshot-molecule.mjs
