[workspace]
members = ["crates/core", "desktop/src-tauri"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["CYLview-NG Contributors"]
license = "Apache-2.0"
repository = "https://github.com/Summykai/CYLview-NG"
rust-version = "1.70"

[workspace.dependencies]
# Core dependencies
wgpu = "0.19"
bytemuck = { version = "1.14", features = ["derive"] }
glam = { version = "0.25", features = ["bytemuck", "serde"] }
pollster = "0.3"
raw-window-handle = "0.6"

# File I/O (chemfiles to be added later)
# chemfiles = "0.10"

# Logging & errors
log = "0.4"
env_logger = "0.11"
thiserror = "1.0"
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async (for Tauri integration)
tokio = { version = "1.35", features = ["rt-multi-thread"] }

# Tauri (desktop only)
tauri = { version = "1.6", features = ["api-all"] }
tauri-build = { version = "1.5" }

# Temporary for chemfiles linking
cc = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
