[workspace]
members = ["crates/core", "desktop/src-tauri"]
resolver = "2"

[workspace.package]
version = "0.1.4"
edition = "2021"
authors = ["CYLview-NG Contributors"]
license = "Apache-2.0"
repository = "https://github.com/Summykai/CYLview-NG"
rust-version = "1.70"

[workspace.dependencies]
# Math & GPU (used by cylview-core)
wgpu = "0.19"
bytemuck = { version = "1.14", features = ["derive"] }
glam = { version = "0.25", features = ["bytemuck", "serde"] }
raw-window-handle = "0.6"

# Logging & errors
log = "0.4"
env_logger = "0.11"
thiserror = "1.0"
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Tauri (desktop only)
tauri = { version = "2.0", features = ["wry"] }
tauri-build = { version = "2.0" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
