[package]
name = "cylview-desktop"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Desktop application for CYLview-NG"

[dependencies]
cylview-core = { path = "../../crates/core" }
tauri = { workspace = true }
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
env_logger = "0.11"
parking_lot = "0.12"
tauri-plugin-single-instance = "2.0"

[build-dependencies]
tauri-build = { workspace = true }

[[bin]]
name = "cylview-ng"
path = "src/main.rs"
